@@ -3,6 +3,8 @@
 	* ioctl_solaris.c: (if_get_mtu) Don't break things if either
 	  IPv6 was disabled at compile time or the current interface
 	  hasn't it enabled.
+	* kernel_socket.c: (ifm_read) Don't forget to call if_get_mtu()
+	  for updated interfaces.
 
 2007-08-17 Denis Ovsienko
 
